--- a/ApiDotNet7july2023/ApiDotNet7july2023.csproj
+++ b/ApiDotNet7july2023/ApiDotNet7july2023.csproj
@@ -15,8 +15,12 @@
 
   <ItemGroup>
     <None Remove="Models\" />
+    <None Remove="Services\" />
+    <None Remove="Services\SuperHeroService\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
+    <Folder Include="Services\" />
+    <Folder Include="Services\SuperHeroService\" />
   </ItemGroup>
 </Project>
